@@ -22,15 +22,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.11.0</version>
         <configuration>
-          <source>16</source>
-          <target>16</target>
+          <source>17</source>
+          <target>17</target>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
-              <version>1.18.42</version>
+              <version>1.18.30</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
@@ -56,34 +56,40 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.1</version>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>2.1.0</version>
         <executions>
           <execution>
-            <id>generate-custom-jre</id>
             <phase>package</phase>
             <goals>
-              <goal>exec</goal>
+              <goal>assemble</goal>
             </goals>
-            <configuration>
-              <executable>${java.home}/bin/jlink</executable>
-              <arguments>
-                <argument>--add-modules</argument>
-                <argument>java.base,java.logging,java.xml,java.desktop</argument>
-                <argument>--no-man-pages</argument>
-                <argument>--no-header-files</argument>
-                <argument>--compress=2</argument> <argument>--output</argument>
-                <argument>${project.build.directory}/sprout-jre</argument>
-              </arguments>
-            </configuration>
           </execution>
         </executions>
+        <configuration>
+          <programs>
+            <program>
+              <mainClass>org.AmineSidki.App</mainClass>
+              <id>sprout</id>
+            </program>
+          </programs>
+        </configuration>
       </plugin>
+
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.6.0</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>bin</descriptorRef>
+          </descriptorRefs>
+          <finalName>sprout-${project.version}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+        </configuration>
         <executions>
           <execution>
             <id>make-distribution</id>
@@ -91,12 +97,6 @@
             <goals>
               <goal>single</goal>
             </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/distribution.xml</descriptor>
-              </descriptors>
-              <appendAssemblyId>false</appendAssemblyId>
-            </configuration>
           </execution>
         </executions>
       </plugin>
